# malt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
malt/: __init__.py  db.py  main.py  mcp_server.py  models.py  security.py  settings.py  tunnel.py
malt/ui/: style.css
malt/views/: log_view.py  project_detail.py  project_list.py  url_generator.py
