[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "malt"
version = "0.1.0"
description = "Manage multiple project MCP servers from one dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.28",
    "PyGObject>=3.50",
    "starlette",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
malt = "malt.main:main"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.22",
]

[tool.mypy]
ignore_missing_imports = true
